--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             <img class="top-demo-img" src="./static/images/pano_demo_1.png" alt="Demo panorama 1">
           </figure>
           <p class="has-text-centered top-demo-caption">
-            Generated 360° Panorama (Living Room)
+           Generated 360° Panorama demo1
           </p>
         </div>
         <div class="column">
@@ -193,7 +193,7 @@
             <img class="top-demo-img" src="./static/images/pano_demo_2.png" alt="Demo panorama 2">
           </figure>
           <p class="has-text-centered top-demo-caption">
-            Generated 360° Panorama (Corridor)
+            Generated 360° Panorama demo2
           </p>
         </div>
         <div class="column">
@@ -201,7 +201,7 @@
             <img class="top-demo-img" src="./static/images/pano_demo_3.png" alt="3DGS reconstruction">
           </figure>
           <p class="has-text-centered top-demo-caption">
-            3D Gaussian Splatting from Generated Panorama
+           Generated 360° Panorama demo3
           </p>
         </div>
       </div>
@@ -215,10 +215,10 @@
       <div class="columns is-variable is-4">
         <div class="column">
           <figure class="image">
-            <img class="top-demo-img" src="./static/images/depth2.png" alt="Demo panorama 1">
+            <img class="top-demo-img" src="./static/images/depth1.png" alt="Demo panorama 1">
           </figure>
           <p class="has-text-centered top-demo-caption">
-            Generated 360° Panorama (Living Room)
+            Panoramic Depth Estimation demo1
           </p>
         </div>
         <div class="column">
@@ -226,15 +226,15 @@
             <img class="top-demo-img" src="./static/images/depth2.png" alt="Demo panorama 2">
           </figure>
           <p class="has-text-centered top-demo-caption">
-            Generated 360° Panorama (Corridor)
+            Panoramic Depth Estimation demo2
           </p>
         </div>
         <div class="column">
           <figure class="image">
-            <img class="top-demo-img" src="./static/images/depth1.png" alt="3DGS reconstruction">
+            <img class="top-demo-img" src="./static/images/depth3.png" alt="3DGS reconstruction">
           </figure>
           <p class="has-text-centered top-demo-caption">
-            3D Gaussian Splatting from Generated Panorama
+            Panoramic Depth Estimation demo3
           </p>
         </div>
       </div>
@@ -434,8 +434,8 @@
 
         <!-- 2: Depth Estimation -->
         <div class="result-card has-text-centered">
-          <img src="./static/images/qual_depth.png" alt="Depth estimation">
-          <p><strong>Depth Estimation (DepthAnythingV2 / UniK3D)</strong></p>
+          <img src="./static/images/depth3.png" alt="Depth estimation">
+          <p><strong>Depth Estimation (DepthAnythingV3)</strong></p>
         </div>
 
         <!-- 3: 3DGS / Mesh -->
